<resources>
    <string name="app_name">SAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sar">Student\'s Advanced Record System</string>
    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="action_logout">Logout</string>
    <string name="select_class">Select Class</string>
    <string name="select_cource">Select Courses</string>
    <string name="set_registration_time">Set Registration Time Limit</string>
    <string name="register_student">Register Student</string>
    <string name="scan_id_details">Scan ID Details</string>
    <string name="powered_by">Powered By</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="submit"><![CDATA[Submit >>]]></string>
</resources>
