<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/horizonal_padding"
        android:background="@drawable/must"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/powered_by"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/horizonal_padding"
            android:text="@string/sar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/student"
            android:id="@+id/btn_std"
            android:background="@drawable/button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lecturer"
            android:layout_marginTop="20sp"
            android:id="@+id/btn_lect"
            android:background="@drawable/button"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>