<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:drawableLeft="@android:drawable/stat_notify_more"
            android:background="@drawable/button"
            android:text="@string/register_student"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:drawableLeft="@android:drawable/stat_notify_more"
            android:background="@drawable/button"
            android:text="@string/select_class"/>

        <Button
            android:layout_width="match_parent"
            android:background="@drawable/button"
            android:layout_marginTop="20sp"
            android:drawableLeft="@android:drawable/stat_notify_more"
            android:layout_height="wrap_content"
            android:text="@string/select_cource"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button"
            android:layout_marginTop="20sp"
            android:text="@string/set_registration_time"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>