<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/horizonal_padding"
        android:background="@drawable/must"
        android:gravity="center"
        android:orientation="vertical">



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40sp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/input_username"
                android:background="@drawable/background_view"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10sp"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/input_password"
            android:inputType="textPassword"
            android:drawableLeft="@android:drawable/ic_partial_secure"
            android:background="@drawable/background_view"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="20sp"
            android:id="@+id/btn_signin"
            android:background="@drawable/button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/powered_by"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/horizonal_padding"
            android:text="@string/sar"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>